--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Signage Player</title>
+    <title>My App</title>
   </head>
   <body>
     <div id="app"></div>
