Temporary fix for packager

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./main.js" data-container="#app"></script>
+    <script src="./app.js" data-container="#app"></script>
     <script>
       if (process.env.BROWSER_SYNC_CLIENT_URL) {
         const current = document.currentScript;
