--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./app.js" data-container="#app"></script>
+    <script src="./index.js" data-container="#app"></script>
     <script>
       if (process.env.BROWSER_SYNC_CLIENT_URL) {
         const current = document.currentScript;
