--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My App</title>
-    <link rel="stylesheet" type="text/css" href="../../node_modules/typeface-roboto/index.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../../node_modules/typeface-roboto/index.css"> -->
   </head>
   <body>
     <div id="app"></div>
