--- a/dev/index.html
+++ b/dev/index.html
@@ -3,10 +3,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MyApp</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="renderer.js"></script>
+  <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
 </body>
 </html>
